Fix color contrast issue

--- a/project/styles/submitted-form.css
+++ b/project/styles/submitted-form.css
@@ -2,13 +2,12 @@
 
 :root {
     --bg-color1: #fff;
-    --bg-color2: #E67E22;
     --bg-color3: #d35400;
 
     --text-color1: #fff;
     --text-color2: #2C3E50;
-    --text-color3: #27AE60;
 }
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -24,18 +23,24 @@ body {
 .success-card {
     background: var(--bg-color1);
     color: var(--text-color2);
-    padding: 30px;
+    padding: 20px;
     border-radius: 10px;
-    width: 90%;
-    max-width: 500px;
+    width: 100%;
+    max-width: 300px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
     animation: fadeIn 0.6s ease;
+    margin: 4rem 0 2rem 0;
 }
 
 .success-card h1 {
     text-align: center;
-    color: var(--text-color3);
+    color: var(--text-color2);
+    text-align: start;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
+
+
 
 .success-card p {
     margin: 8px 0;
@@ -48,7 +53,7 @@ body {
     text-align: center;
     margin-top: 20px;
     padding: 12px;
-    background: var(--bg-color2);
+    background: var(--text-color2);
     color: var(--text-color1);
     text-decoration: none;
     border-radius: 6px;
